remove pretty printing properly